feat: Refactor entry file creation and routing logic in vatts
- Removed the createEntryFile function and replaced it with a builder options object to manage routes, layout, and notFound components.
- Updated the vatts function to utilize the new builder options for entry point generation.
- Enhanced hot reload functionality to update builder options instead of regenerating entry files.
- Adjusted build and watch processes to work with the new builder options structure.

feat: Improve React and Vue entry client initialization

- Added console logging for components and initial data during client initialization in both React and Vue entry files.

fix: Clean up React build configuration

- Removed unnecessary definitions related to React DevTools in the build configuration.

feat: Update VattsConfig interface to include backendPort

- Added backendPort to the VattsConfig interface for better configuration management.

refactor: Streamline HTTP3 server implementation

- Removed unused WebTransport functionality and related code from the HTTP3 server.
- Implemented a cleaner structure for handling SSL and HTTP/3 connections.

feat: Introduce caching mechanism for static files

- Created a new cache package to manage in-memory caching of static files.
- Implemented cache janitor to clean expired cache items periodically.
- Enhanced response handling to utilize cached responses when available.

feat: Implement security checks for incoming requests

- Added a security package to analyze incoming requests for malicious payloads.
- Implemented checks for prototype pollution and NoSQL injection patterns.

feat: Optimize traffic handling with request coalescing

- Introduced a traffic package to manage request fusion, reducing duplicate GET requests.
- Implemented response recording and snapshotting for efficient response delivery.

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ examples/**/.hight/
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
+
+**/**/.vatts/
+
+**/**/node_modules/
+services/**/binaries/
+services/core-go/go.sum
