--- a/docs/package.json
+++ b/docs/package.json
@@ -16,7 +16,7 @@
     "prismjs": "^1.30.0",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
-    "vatts": "^1.4.1-test.1",
+    "vatts": "workspace:*",
     "vue": "^3.5.27"
   },
   "devDependencies": {
